# Mandelbrot-Viewer

./: .gitignore  CMakeLists.txt  inputHandler.c  inputHandler.h  main.c  mandelbrot.c  mandelbrot.h  readme.md  vcpkg.json
.github/workflows/: main.yml
include/: benchmark.h  colour_palette.h  core_count.h  inputHandler.h  mandelbrot.h  render_context.h  simd_handler.h
src/: benchmark.c  colour_palette.c  core_count.c  inputHandler.c  main.c  mandelbrot.c  simd_handler.cpp
